CSS fixes * Got rid of reset.css for NameTags (should be at the very beginning of global styles if at all) * Fixed up tables.  Also used thead. * Fixed white lines * Fixed space before NameTags heading * Fixed login field alignment

--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -113,10 +113,6 @@ h3{
 .ng-invalid:not(form) {
   border-left: 5px solid orange; /* orange */
 }
-.panel-body{
-  background-color: #1d2528;
-  color: lightblue;
-}
 .form-group{
   background-color: #1d2528;
   color: lightblue;
