--- a/src/app/payment/payment.component.css
+++ b/src/app/payment/payment.component.css
@@ -53,10 +53,6 @@
 .ng-invalid:not(form) {
   border-left: 5px solid orange; /* orange */
 }
-.panel-body{
-  background-color: #1d2528;
-  color: lightblue;
-}
 .form-group{
   background-color: #1d2528;
   color: lightblue;
