--- a/src/app/reports/reports.component.css
+++ b/src/app/reports/reports.component.css
@@ -11,8 +11,3 @@
   margin: 2px 6px;
   color: black;  
 }
-
-.panel-body{
-  background-color: #1d2528;
-  color: lightblue;
-}
